# gemini_api_caller

./: .gitignore  CMakeLists.txt  LICENSE  README.md  backend.cpp  backend.h  call.cpp  call.h  inputhandler.cpp  inputhandler.h  main.cpp  main.qml  version_template.h
app/: audio_processor.cpp  audio_processor.h  backend.cpp  backend.h  main.cpp  main.qml  whisper_wrapper.cpp  whisper_wrapper.h
daemon/: main.cpp
settings/: backend.cpp  backend.h  main.cpp  settings.qml  settings_tr.ts
